Set connections to start all major fragments
RecipeFragment.java
CookbookDetailsFragment.java
CookbookEditFragment.java
CookbookManualFragment.java
CookbookImportFragment.java

--- a/app/src/main/res/layout/cookbook_manual_fragment.xml
+++ b/app/src/main/res/layout/cookbook_manual_fragment.xml
@@ -1,157 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manual_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.CookbookManualFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/manual_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/manual_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="New Recipe"
-        app:titleTextColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <EditText
-        android:id="@+id/manual_recipe_name_edit_text"
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/manual_nested"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/text_margin"
-        android:hint="@string/enter_recipe_name_hint"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:inputType="textCapWords"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/manual_toolbar"
-        android:importantForAutofill="no" />
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    <EditText
-        android:id="@+id/manual_description_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textCapSentences"
-        android:layout_marginStart="@dimen/text_margin"
-        android:hint="@string/enter_recipe_description_hint"
-        style="@style/TextAppearance.MaterialComponents.Body1"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:importantForAutofill="no"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/manual_recipe_name_edit_text" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/manual_ingredient_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/ingredients"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        app:layout_constraintTop_toBottomOf="@id/manual_description_edit_text"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/manual_content_label"
+                style="@style/HeadingTextView"
+                android:text="@string/content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/manual_ingredient_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/manual_fragment_height"
-        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_step_label"
-        tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
+            <Button
+                android:id="@+id/manual_add_content_button"
+                style="@style/AppButton"
+                android:text="@string/add_button_text"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintBottom_toTopOf="@id/manual_content_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_content_label" />
 
-    <Button
-        android:id="@+id/manual_add_ingredient_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_button_text"
-        android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/manual_button_padding"
-        android:paddingEnd="@dimen/manual_button_padding"
-        app:icon="@drawable/ic_add_24px"
-        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/manual_content_container"
+                android:layout_width="match_parent"
+                style="@style/AppFragmentContainer"
+                app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
+                app:layout_constraintTop_toBottomOf="@id/manual_content_label"
+                tools:context="com.larsonapps.personalcookbook.ContentFragment" />
 
-    <TextView
-        android:id="@+id/manual_step_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/steps"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/manual_ingredient_label"
+                style="@style/HeadingTextView"
+                android:text="@string/ingredients"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_content_container" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/manual_step_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/manual_fragment_height"
-        tools:context="com.larsonapps.personalcookbook.StepFragment"
-        app:layout_constraintTop_toBottomOf="@id/manual_step_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_image_label"
-        app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/manual_add_ingredient_button"
+                style="@style/AppButton"
+                android:text="@string/add_button_text"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label" />
 
-    <Button
-        android:id="@+id/manual_add_step_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_button_text"
-        android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/manual_button_padding"
-        android:paddingEnd="@dimen/manual_button_padding"
-        app:icon="@drawable/ic_add_24px"
-        app:layout_constraintTop_toBottomOf="@id/manual_step_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_step_label"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/manual_ingredient_list_container"
+                android:layout_width="match_parent"
+                style="@style/AppFragmentContainer"
+                app:layout_constraintBottom_toTopOf="@id/manual_step_label"
+                app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
+                tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
 
-    <TextView
-        android:id="@+id/manual_image_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/images"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/manual_step_list_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/manual_image_list_container"/>
+            <TextView
+                android:id="@+id/manual_step_label"
+                style="@style/HeadingTextView"
+                android:text="@string/steps"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/manual_image_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/manual_fragment_height"
-        tools:context="com.larsonapps.personalcookbook.ImageFragment"
-        app:layout_constraintTop_toBottomOf="@id/manual_image_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_submit_button"/>
+            <Button
+                android:id="@+id/manual_add_step_button"
+                style="@style/AppButton"
+                android:text="@string/add_button_text"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintBottom_toTopOf="@id/manual_step_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_step_label" />
 
-    <Button
-        android:id="@+id/manual_add_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_button_text"
-        android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/manual_button_padding"
-        android:paddingEnd="@dimen/manual_button_padding"
-        app:icon="@drawable/ic_add_24px"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/manual_image_label"
-        app:layout_constraintBottom_toTopOf="@id/manual_image_label"/>
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/manual_step_list_container"
+                android:layout_width="match_parent"
+                style="@style/AppFragmentContainer"
+                app:layout_constraintBottom_toTopOf="@id/manual_image_label"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_step_label"
+                tools:context="com.larsonapps.personalcookbook.StepFragment" />
 
-    <Button
-        android:id="@+id/manual_submit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        android:paddingStart="@dimen/manual_button_padding"
-        android:paddingEnd="@dimen/manual_button_padding"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/manual_image_label"
+                style="@style/HeadingTextView"
+                android:text="@string/images"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_step_list_container" />
+
+            <Button
+                android:id="@+id/manual_add_image_button"
+                style="@style/AppButton"
+                android:text="@string/add_button_text"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintBottom_toTopOf="@id/manual_image_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/manual_image_label" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/manual_image_list_container"
+                android:layout_width="match_parent"
+                style="@style/AppFragmentContainer"
+                app:layout_constraintBottom_toTopOf="@id/manual_submit_button"
+                app:layout_constraintTop_toBottomOf="@id/manual_image_label"
+                tools:context="com.larsonapps.personalcookbook.ImageFragment" />
+
+           <Button
+                android:id="@+id/manual_submit_button"
+                style="@style/AppButton"
+                android:text="@string/submit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
