--- a/app/src/main/res/layout/edit_content_fragment.xml
+++ b/app/src/main/res/layout/edit_content_fragment.xml
@@ -3,9 +3,137 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/add_content_description_label"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/edit_content_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_recipe_name_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="textCapWords"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/edit_content_short_description_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_short_description_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="textCapWords"
+            android:importantForAutofill="no" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/edit_content_second_line_label_text"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_content_servings_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_servings_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="number"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/edit_content_prep_time_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_prep_time_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="number"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/edit_content_cook_time_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_cook_time_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="number"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/edit_content_total_time_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:hint="@string/edit_content_total_time_hint"
+            android:layout_marginBottom="@dimen/dialog_vertical_margin"
+            android:layout_marginStart="@dimen/dialog_margin"
+            android:layout_marginEnd="@dimen/dialog_margin"
+            android:inputType="number"
+            android:importantForAutofill="no" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/edit_content_description_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:hint="@string/edit_content_description_hint"
+        android:layout_marginBottom="@dimen/dialog_vertical_margin"
+        android:layout_marginStart="@dimen/dialog_margin"
+        android:layout_marginEnd="@dimen/dialog_margin"
+        android:inputType="textCapWords"
+        android:importantForAutofill="no" />
+
+    <EditText
+        android:id="@+id/edit_content_notes_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:hint="@string/edit_content_notes_hint"
+        android:layout_marginBottom="@dimen/dialog_vertical_margin"
+        android:layout_marginStart="@dimen/dialog_margin"
+        android:layout_marginEnd="@dimen/dialog_margin"
+        android:inputType="textCapWords"
+        android:importantForAutofill="no" />
+
+    <EditText
+        android:id="@+id/edit_content_copyright_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:hint="@string/edit_content_copyright_hint"
+        android:layout_marginBottom="@dimen/dialog_vertical_margin"
+        android:layout_marginStart="@dimen/dialog_margin"
+        android:layout_marginEnd="@dimen/dialog_margin"
+        android:inputType="textCapWords"
+        android:importantForAutofill="no" />
+
+    <Button
+        android:id="@+id/edit_content_submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/submit" />
 </LinearLayout>
