--- a/app/src/main/res/layout/step_fragment_item_list.xml
+++ b/app/src/main/res/layout/step_fragment_item_list.xml
@@ -5,9 +5,9 @@
     android:id="@+id/step_list"
     android:name="com.larsonapps.personalcookbook.ui.StepFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.StepFragment"
     tools:listitem="@layout/step_fragment_item" />
