--- a/app/src/main/res/layout/add_category_fragment.xml
+++ b/app/src/main/res/layout/add_category_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="@dimen/dialog_vertical_margin"
         android:layout_marginTop="@dimen/dialog_vertical_margin"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        android:text="@string/add_category_label_text"/>
+        android:text="@string/add_category_edit_text_hint"/>
 
     <EditText
         android:id="@+id/add_category_edit_text"
@@ -22,5 +22,7 @@
         android:layout_marginBottom="@dimen/dialog_vertical_margin"
         android:layout_marginStart="@dimen/dialog_margin"
         android:layout_marginEnd="@dimen/dialog_margin"
-        android:inputType="textCapWords" />
+        android:inputType="textCapWords"
+        android:hint="@string/add_category_edit_text_hint"
+        android:importantForAutofill="no" />
 </LinearLayout>
