--- a/app/src/main/res/layout/content_fragment.xml
+++ b/app/src/main/res/layout/content_fragment.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,23 +18,13 @@
 
             <TextView
                 android:id="@+id/name_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content" />
 
             <TextView
                 android:id="@+id/short_description_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content" />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/description_image_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginBottom="@dimen/edit_description_margin"
-                android:background="@drawable/button_selector"
-                android:padding="@dimen/edit_icon_padding"
-                android:src="@drawable/ic_edit_24px" />
         </LinearLayout>
 
         <LinearLayout
@@ -44,25 +34,25 @@
 
             <TextView
                 android:id="@+id/servings_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/prep_time_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/cook_time_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/total_time_text_view"
-                style="@style/DetailTextView"
+                style="@style/ContentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
         </LinearLayout>
