--- a/app/src/main/res/layout/cookbook_import_fragment.xml
+++ b/app/src/main/res/layout/cookbook_import_fragment.xml
@@ -1,139 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manual_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.CookbookImportFragment">
+    tools:context=".ui.CookbookManualFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/import_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/manual_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="Import Recipe"
-        app:titleTextColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <EditText
-        android:id="@+id/import_url_edit_text"
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/manual_nested"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/text_margin"
-        android:hint="@string/enter_url_of_recipe_hint"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:inputType="textUri"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/import_toolbar"
-        android:importantForAutofill="no" />
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    <TextView
-        android:id="@+id/import_recipe_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/import_url_edit_text"
-        app:layout_constraintStart_toStartOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            tools:context=".ui.CookbookImportFragment">
 
-    <CheckBox
-        android:id="@+id/import_recipe_name_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/import_recipe_name_text_view"
-        app:layout_constraintBottom_toTopOf="@id/import_recipe_name_text_view"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/import_url_edit_text"
+                style="@style/TextAppearance.MaterialComponents.Headline5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/text_margin"
+                android:hint="@string/enter_url_of_recipe_hint"
+                android:importantForAutofill="no"
+                android:inputType="textUri"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/import_description_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/text_margin"
-        style="@style/TextAppearance.MaterialComponents.Body1"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/import_recipe_name_text_view" />
+            <TextView
+                android:id="@+id/import_recipe_name_text_view"
+                style="@style/HeadingTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_url_edit_text" />
 
-    <CheckBox
-        android:id="@+id/import_description_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/import_description_text_view"
-        app:layout_constraintBottom_toTopOf="@id/import_description_text_view"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <CheckBox
+                android:id="@+id/import_recipe_name_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@id/import_recipe_name_text_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_recipe_name_text_view" />
 
-    <TextView
-        android:id="@+id/import_ingredient_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/ingredients"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        app:layout_constraintTop_toBottomOf="@id/import_description_text_view"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/import_description_text_view"
+                style="@style/ContentTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_recipe_name_text_view" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/import_ingredient_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/import_fragment_height"
-        app:layout_constraintTop_toBottomOf="@id/import_ingredient_label"
-        app:layout_constraintBottom_toTopOf="@id/import_step_label"
-        tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
+            <CheckBox
+                android:id="@+id/import_description_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@id/import_description_text_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_description_text_view" />
 
-    <TextView
-        android:id="@+id/import_step_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/steps"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/import_ingredient_list_container"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/import_ingredient_label"
+                style="@style/HeadingTextView"
+                android:text="@string/ingredients"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_description_text_view" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/import_step_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/import_fragment_height"
-        tools:context="com.larsonapps.personalcookbook.StepFragment"
-        app:layout_constraintTop_toBottomOf="@id/import_step_label"
-        app:layout_constraintBottom_toTopOf="@id/import_image_label"
-        app:layout_constraintStart_toStartOf="parent" />
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/import_ingredient_list_container"
+                style="@style/AppFragmentContainer"
+                android:layout_width="match_parent"
+                app:layout_constraintBottom_toTopOf="@id/import_step_label"
+                app:layout_constraintTop_toBottomOf="@id/import_ingredient_label"
+                tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
 
-    <TextView
-        android:id="@+id/import_image_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:text="@string/images"
-        android:textColor="@color/white"
-        android:layout_marginStart="@dimen/text_margin"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/import_step_list_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/import_image_list_container"/>
+            <TextView
+                android:id="@+id/import_step_label"
+                style="@style/HeadingTextView"
+                android:text="@string/steps"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_ingredient_list_container" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/import_image_list_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/import_fragment_height"
-        tools:context="com.larsonapps.personalcookbook.ImageFragment"
-        app:layout_constraintTop_toBottomOf="@id/import_image_label"
-        app:layout_constraintBottom_toTopOf="@id/import_submit_button"/>
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/import_step_list_container"
+                style="@style/AppFragmentContainer"
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/import_step_label"
+                tools:context="com.larsonapps.personalcookbook.StepFragment" />
 
-    <Button
-        android:id="@+id/import_submit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        android:paddingStart="@dimen/manual_button_padding"
-        android:paddingEnd="@dimen/manual_button_padding"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            <TextView
+                android:id="@+id/import_image_label"
+                style="@style/HeadingTextView"
+                android:text="@string/images"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/import_step_list_container" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/import_image_list_container"
+                style="@style/AppFragmentContainer"
+                android:layout_width="match_parent"
+                app:layout_constraintBottom_toTopOf="@id/import_submit_button"
+                app:layout_constraintTop_toBottomOf="@id/import_image_label"
+                tools:context="com.larsonapps.personalcookbook.ImageFragment" />
+
+            <Button
+                android:id="@+id/import_submit_button"
+                style="@style/AppButton"
+                android:text="@string/submit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
