--- a/app/src/main/res/layout/image_fragment_item_list.xml
+++ b/app/src/main/res/layout/image_fragment_item_list.xml
@@ -2,12 +2,12 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/image_list"
     android:name="com.larsonapps.personalcookbook.ui.ImageFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.ImageFragment"
     tools:listitem="@layout/image_fragment_item" />
